infra/kubernetes/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector: { app: cdfir, component: api }
  ports:
    - { name: http, port: 80, targetPort: http }
